--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,52 +13,54 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-23 Fri 21:52]
+#+CAPTION: Clock summary at [2016-09-23 Fri 22:49]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *78:34* |       |       | 100.0 |
+| *Total time*                                                                | *79:25* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 78:34   |       |       | 100.0 |
-| Active                                                                      |         | 78:34 |       | 100.0 |
+| Stories                                                                     | 79:25   |       |       | 100.0 |
+| Active                                                                      |         | 79:25 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   4.9 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
 | COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.2 |
 | CANCELLED Remove inclusion dependencies builder factory                     |         |       |  0:14 |   0.3 |
-| COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.7 |
+| COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.6 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.5 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.7 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.7 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.6 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.5 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   4.0 |
-| COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.4 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   3.9 |
+| COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.3 |
 | COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.2 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  15.3 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  15.1 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.5 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.7 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.9 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.5 |
 | COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.6 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   8.4 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   8.3 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   1.9 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.4 |
-| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.1 |
+| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.0 |
 | COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.4 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.6 |
-| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.4 |
+| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.3 |
 | COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   2.9 |
-| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   3.9 |
+| COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   3.8 |
 | COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.6 |
 | CANCELLED Add a stitch prefix to stitch fields                              |         |       |  0:03 |   0.1 |
 | COMPLETED Formatter properties are not optional in assistant                |         |       |  0:10 |   0.2 |
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.5 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.0 |
-| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  12.0 |
+| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.9 |
 | COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   7.2 |
-| COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.4 |
-| STARTED Add formattable element                                             |         |       |  0:19 |   0.4 |
+| COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.3 |
+| COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.9 |
+| STARTED Add formattable element                                             |         |       |  0:21 |   0.4 |
+| STARTED Add transformer to quilt.cpp                                        |         |       |  0:05 |   0.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1182,10 +1184,23 @@ Actually, since we are going to dump most of this code in the
 refactor, rename only the data types and leave the rest of the code as
 is.
 
+*** COMPLETED Update quilt.cpp with pipeline classes                  :story:
+    CLOSED: [2016-09-23 Fri 22:48]
+    CLOCK: [2016-09-23 Fri 22:43]--[2016-09-23 Fri 22:48] =>  0:05
+    CLOCK: [2016-09-23 Fri 22:04]--[2016-09-23 Fri 22:43] =>  0:39
+
+Create skeletons for all new classes and make sure it hangs together
+conceptually.
+
 *** STARTED Add formattable element                                   :story:
+    CLOCK: [2016-09-23 Fri 22:02]--[2016-09-23 Fri 22:04] =>  0:02
     CLOCK: [2016-09-23 Fri 20:27]--[2016-09-23 Fri 20:46] =>  0:19
 
-Tasks:
+Create a top-level formattable type that is an aggregation of the
+element and the element configuration. Update workflow to output a
+list of formattable and formatters to take in formattable.
+
+Previous understanding:
 
 - create a top-level type that has formatter, element properties and
   element. Must be non-generatable. Add formattable id as the sum of
@@ -1202,6 +1217,14 @@ Tasks:
   is used by assistant for "enabled". We should also populate it with
   enabled facets so that helpers can determine their status (e.g. io
   helpers when used from types
+
+*** STARTED Add transformer to quilt.cpp                              :story:
+    CLOCK: [2016-09-23 Fri 21:56]--[2016-09-23 Fri 22:01] =>  0:05
+
+Takes in a =yarn::model= and generates a container of
+=formattables=. The model will include target and non-target types.
+
+Add workflow methods to execute the new formattables pipeline.
 
 *** Do not compute inclusion directives for system models             :story:
 
@@ -1227,85 +1250,9 @@ need to create a story to clean up the =origin_type= and
 =generation_type= and then we can make use of it to determine if we
 need to compute inclusion, path etc or not.
 
-*** Add transformer to quilt.cpp                                      :story:
-
-Takes in a =yarn::model= and generates a =formattables::model=. The
-model will include target and non-target types.
-
-Add workflow methods to execute the new formattables pipeline.
-
 *** Add includer to quilt.cpp                                         :story:
 
 Responsible for computing the inclusion dependencies.
-
-*** Create the notion of a formatter alias                            :story:
-
-We did a bit of a hack with mapping the facet to the default
-formatter. What we really need is the notion of an alias. It still
-looks like a formatter name (for example "header_formatter") but it
-must be first resolved into an actual formatter. For this we need a
-type index.
-
-Other names:
-
-- canonical formatter
-- reference formatter
-
-We need to support a strange use case: where the formatter does not
-exist for a given element type. For example, we do not have primitive
-formatters, but there are directives set in them:
-
-#+begin_src json-mode
-        {
-            "meta_type" : "primitive",
-            "simple_name" : "uint64_t",
-            "extensions" : {
-                "quilt.cpp.helper.family" : "Number",
-                "quilt.cpp.aspect.requires_manual_default_constructor" : true,
-                "quilt.cpp.types.class_header_formatter.inclusion_directive" : "<cstdint>",
-                "quilt.cpp.hash.class_header_formatter.inclusion_required" : false,
-                "quilt.cpp.io.class_header_formatter.inclusion_required" : false,
-                "quilt.cpp.test_data.class_header_formatter.inclusion_required" : false,
-                "quilt.cpp.serialization.class_header_formatter.inclusion_required" : false,
-                "quilt.cpp.odb.class_header_formatter.inclusion_required" : false
-            }
-        },
-#+end_src
-
-The problem with this is that if we do not have a formatter for
-primitives, then we will not read the directives. In the past this
-worked because we were processing the cross-product of formatters and
-element sub-types, so the mistake of
-=quilt.cpp.types.class_header_formatter.inclusion_directive= was
-actually resulted in the correct result. But of course, we cannot
-replace class_header_formatter with the correct formatter name (as we
-don't have one). Nor does it sound good to have to hard-code the
-formatter name against the type. One way to solve this is with
-canonical formatters:
-
-- use the canonical formatter name in the declaration
-- ensure we always read directives for the canonical formatter from
-  the meta-data.
-- when processing, only set the canonical formatter if it was not
-  already set by meta-data.
-
-When testing the fix, we need to delete the mock formaters created for
-primitives.
-
-*** Tidy-up of inclusion terminology                                  :story:
-
-Random notes:
-
-- imports and exports
-- some types support both (headers)
-- some support imports only (cpp)
-- some support neither (cmakelists, etc).
-
-*** Supply formatter's container to injector                          :story:
-
-At present the injector is calling the formatters' workflow
-directly, in order to obtain the formatters' container. It should
-receive it as a parameter during initialisation.
 
 *** Add enabler to quilt.cpp                                          :story:
 
@@ -1371,6 +1318,75 @@ Interestingly we could have different defaults for formatters in proxy
 models. For example, if a model is proxy we can assume that we should
 not compute inclusion paths. This could save a lot of time when
 specifying the models in JSON.
+
+*** Create the notion of a formatter alias                            :story:
+
+We did a bit of a hack with mapping the facet to the default
+formatter. What we really need is the notion of an alias. It still
+looks like a formatter name (for example "header_formatter") but it
+must be first resolved into an actual formatter. For this we need a
+type index.
+
+Other names:
+
+- canonical formatter
+- reference formatter
+
+We need to support a strange use case: where the formatter does not
+exist for a given element type. For example, we do not have primitive
+formatters, but there are directives set in them:
+
+#+begin_src json-mode
+        {
+            "meta_type" : "primitive",
+            "simple_name" : "uint64_t",
+            "extensions" : {
+                "quilt.cpp.helper.family" : "Number",
+                "quilt.cpp.aspect.requires_manual_default_constructor" : true,
+                "quilt.cpp.types.class_header_formatter.inclusion_directive" : "<cstdint>",
+                "quilt.cpp.hash.class_header_formatter.inclusion_required" : false,
+                "quilt.cpp.io.class_header_formatter.inclusion_required" : false,
+                "quilt.cpp.test_data.class_header_formatter.inclusion_required" : false,
+                "quilt.cpp.serialization.class_header_formatter.inclusion_required" : false,
+                "quilt.cpp.odb.class_header_formatter.inclusion_required" : false
+            }
+        },
+#+end_src
+
+The problem with this is that if we do not have a formatter for
+primitives, then we will not read the directives. In the past this
+worked because we were processing the cross-product of formatters and
+element sub-types, so the mistake of
+=quilt.cpp.types.class_header_formatter.inclusion_directive= was
+actually resulted in the correct result. But of course, we cannot
+replace class_header_formatter with the correct formatter name (as we
+don't have one). Nor does it sound good to have to hard-code the
+formatter name against the type. One way to solve this is with
+canonical formatters:
+
+- use the canonical formatter name in the declaration
+- ensure we always read directives for the canonical formatter from
+  the meta-data.
+- when processing, only set the canonical formatter if it was not
+  already set by meta-data.
+
+When testing the fix, we need to delete the mock formaters created for
+primitives.
+
+*** Supply formatter's container to injector                          :story:
+
+At present the injector is calling the formatters' workflow
+directly, in order to obtain the formatters' container. It should
+receive it as a parameter during initialisation.
+
+*** Tidy-up of inclusion terminology                                  :story:
+
+Random notes:
+
+- imports and exports
+- some types support both (headers)
+- some support imports only (cpp)
+- some support neither (cmakelists, etc).
 
 *** Move name builder into yarn                                       :story:
 
