--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-23 Fri 22:49]
+#+CAPTION: Clock summary at [2016-09-23 Fri 23:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *79:25* |       |       | 100.0 |
+| *Total time*                                                                | *79:36* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 79:25   |       |       | 100.0 |
-| Active                                                                      |         | 79:25 |       | 100.0 |
+| Stories                                                                     | 79:36   |       |       | 100.0 |
+| Active                                                                      |         | 79:36 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   4.9 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
@@ -40,7 +40,7 @@
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.9 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.5 |
 | COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.6 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   8.3 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   8.2 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   1.9 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.4 |
 | COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.0 |
@@ -56,11 +56,11 @@
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.0 |
 | COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.9 |
-| COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   7.2 |
+| COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   7.1 |
 | COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.3 |
 | COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.9 |
 | STARTED Add formattable element                                             |         |       |  0:21 |   0.4 |
-| STARTED Add transformer to quilt.cpp                                        |         |       |  0:05 |   0.1 |
+| STARTED Add transformer to quilt.cpp                                        |         |       |  0:16 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1219,6 +1219,7 @@ Previous understanding:
   helpers when used from types
 
 *** STARTED Add transformer to quilt.cpp                              :story:
+    CLOCK: [2016-09-23 Fri 22:49]--[2016-09-23 Fri 23:00] =>  0:11
     CLOCK: [2016-09-23 Fri 21:56]--[2016-09-23 Fri 22:01] =>  0:05
 
 Takes in a =yarn::model= and generates a container of
