--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-23 Fri 23:00]
+#+CAPTION: Clock summary at [2016-09-24 Sat 07:12]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *79:36* |       |       | 100.0 |
+| *Total time*                                                                | *80:07* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 79:36   |       |       | 100.0 |
-| Active                                                                      |         | 79:36 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   4.9 |
+| Stories                                                                     | 80:07   |       |       | 100.0 |
+| Active                                                                      |         | 80:07 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   4.8 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
 | COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.2 |
@@ -29,12 +29,12 @@
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   1.6 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.5 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.7 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.6 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.5 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.5 |
 | CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   3.9 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.3 |
 | COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.2 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  15.1 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  15.0 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.5 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.7 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.9 |
@@ -55,12 +55,12 @@
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.5 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.0 |
-| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.9 |
+| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.8 |
 | COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   7.1 |
 | COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.3 |
 | COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.9 |
+| STARTED Add transformer to quilt.cpp                                        |         |       |  0:47 |   1.0 |
 | STARTED Add formattable element                                             |         |       |  0:21 |   0.4 |
-| STARTED Add transformer to quilt.cpp                                        |         |       |  0:16 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1192,6 +1192,16 @@ is.
 Create skeletons for all new classes and make sure it hangs together
 conceptually.
 
+*** STARTED Add transformer to quilt.cpp                              :story:
+    CLOCK: [2016-09-24 Sat 06:40]--[2016-09-24 Sat 07:11] =>  0:31
+    CLOCK: [2016-09-23 Fri 22:49]--[2016-09-23 Fri 23:00] =>  0:11
+    CLOCK: [2016-09-23 Fri 21:56]--[2016-09-23 Fri 22:01] =>  0:05
+
+Takes in a =yarn::model= and generates a container of
+=formattables=. The model will include target and non-target types.
+
+Add workflow methods to execute the new formattables pipeline.
+
 *** STARTED Add formattable element                                   :story:
     CLOCK: [2016-09-23 Fri 22:02]--[2016-09-23 Fri 22:04] =>  0:02
     CLOCK: [2016-09-23 Fri 20:27]--[2016-09-23 Fri 20:46] =>  0:19
@@ -1218,14 +1228,9 @@ Previous understanding:
   enabled facets so that helpers can determine their status (e.g. io
   helpers when used from types
 
-*** STARTED Add transformer to quilt.cpp                              :story:
-    CLOCK: [2016-09-23 Fri 22:49]--[2016-09-23 Fri 23:00] =>  0:11
-    CLOCK: [2016-09-23 Fri 21:56]--[2016-09-23 Fri 22:01] =>  0:05
+*** Remove formatter id                                               :story:
 
-Takes in a =yarn::model= and generates a container of
-=formattables=. The model will include target and non-target types.
-
-Add workflow methods to execute the new formattables pipeline.
+Not clear why we need this given we have formatter name.
 
 *** Do not compute inclusion directives for system models             :story:
 
