--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-24 Sat 07:12]
+#+CAPTION: Clock summary at [2016-09-24 Sat 09:22]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *80:07* |       |       | 100.0 |
+| *Total time*                                                                | *80:28* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 80:07   |       |       | 100.0 |
-| Active                                                                      |         | 80:07 |       | 100.0 |
+| Stories                                                                     | 80:28   |       |       | 100.0 |
+| Active                                                                      |         | 80:28 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:53 |   4.8 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.6 |
@@ -30,18 +30,18 @@
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   1.5 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.7 |
 | COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   6.5 |
-| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.5 |
+| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   2.4 |
 | CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   3.9 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.3 |
-| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.2 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  15.0 |
+| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   3.1 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  14.9 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.5 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.7 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.9 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.5 |
 | COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.6 |
 | COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   8.2 |
-| COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   1.9 |
+| COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   1.8 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.4 |
 | COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.0 |
 | COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.4 |
@@ -55,11 +55,11 @@
 | COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.5 |
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   1.0 |
-| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.8 |
+| COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  11.7 |
 | COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   7.1 |
 | COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.3 |
 | COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.9 |
-| STARTED Add transformer to quilt.cpp                                        |         |       |  0:47 |   1.0 |
+| STARTED Add transformer to quilt.cpp                                        |         |       |  1:08 |   1.4 |
 | STARTED Add formattable element                                             |         |       |  0:21 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1193,6 +1193,7 @@ Create skeletons for all new classes and make sure it hangs together
 conceptually.
 
 *** STARTED Add transformer to quilt.cpp                              :story:
+    CLOCK: [2016-09-24 Sat 09:01]--[2016-09-24 Sat 09:22] =>  0:21
     CLOCK: [2016-09-24 Sat 06:40]--[2016-09-24 Sat 07:11] =>  0:31
     CLOCK: [2016-09-23 Fri 22:49]--[2016-09-23 Fri 23:00] =>  0:11
     CLOCK: [2016-09-23 Fri 21:56]--[2016-09-23 Fri 22:01] =>  0:05
