--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-25 Sun 11:28]
+#+CAPTION: Clock summary at [2016-09-25 Sun 11:45]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *88:05* |       |       | 100.0 |
+| *Total time*                                                                | *88:21* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 88:05   |       |       | 100.0 |
-| Active                                                                      |         | 88:05 |       | 100.0 |
+| Stories                                                                     | 88:21   |       |       | 100.0 |
+| Active                                                                      |         | 88:21 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  4:10 |   4.7 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.5 |
@@ -39,8 +39,8 @@
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.6 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   1.7 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   1.4 |
-| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.3 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   7.5 |
+| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   3.2 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |   7.4 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   1.7 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.3 |
 | COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   2.7 |
@@ -56,13 +56,13 @@
 | COMPLETED Handle module generability in yarn                                |         |       |  0:20 |   0.4 |
 | COMPLETED Do a cursory investigation of dia plugin support                  |         |       |  0:49 |   0.9 |
 | COMPLETED Consider merging provider interface with file formatter           |         |       |  9:26 |  10.7 |
-| COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   6.5 |
+| COMPLETED Add type index to name and to formatter interface                 |         |       |  5:41 |   6.4 |
 | COMPLETED Rename formattables properties to configuration                   |         |       |  1:04 |   1.2 |
 | COMPLETED Update quilt.cpp with pipeline classes                            |         |       |  0:44 |   0.8 |
 | COMPLETED Add transformer to quilt.cpp                                      |         |       |  1:28 |   1.7 |
 | COMPLETED Add enabler to quilt.cpp                                          |         |       |  5:59 |   6.8 |
 | STARTED Add formattable element                                             |         |       |  0:21 |   0.4 |
-| STARTED Add includer to quilt.cpp                                           |         |       |  1:01 |   1.2 |
+| STARTED Add includer to quilt.cpp                                           |         |       |  1:17 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1239,6 +1239,7 @@ Previous understanding:
 - add an enablement map for all formatters in the formatter
 
 *** STARTED Add includer to quilt.cpp                                 :story:
+    CLOCK: [2016-09-25 Sun 11:29]--[2016-09-25 Sun 11:45] =>  0:16
     CLOCK: [2016-09-25 Sun 11:01]--[2016-09-25 Sun 11:28] =>  0:27
     CLOCK: [2016-09-25 Sun 10:26]--[2016-09-25 Sun 11:00] =>  0:34
 
@@ -1247,7 +1248,9 @@ Responsible for computing the inclusion dependencies.
 - add a flag in builder to choose new or old API. Supply formattables
   container by ID and new directives repository. When using old API,
   these are default initialised. With new API the other parameters are
-  default initialised.
+  default initialised. Actually a better approach is to create two
+  builder impls and to decide which one to use based on the
+  constructor of the builder.
 
 *** Do not compute inclusion directives for system models             :story:
 
